--- a/QiHuangDJ/VIewController/dianbo/VideoDianbo/DianboCell.xib
+++ b/QiHuangDJ/VIewController/dianbo/VideoDianbo/DianboCell.xib
@@ -27,14 +27,14 @@
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="内容 内容 内容 内容 内容内容 内容 内容 内容 内容内容 内容 内容 内容 内容" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="236" translatesAutoresizingMaskIntoConstraints="NO" id="LPD-ZD-Rse">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" restorationIdentifier="content label" text="内容 内容 内容 内容 内容内容 内容 内容 内容 内容内容 内容 内容 内容 内容" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="236" translatesAutoresizingMaskIntoConstraints="NO" id="LPD-ZD-Rse">
                         <rect key="frame" x="71" y="25" width="245" height="47"/>
                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="232" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="74" translatesAutoresizingMaskIntoConstraints="NO" id="nVP-7p-Nfp">
-                        <rect key="frame" x="100" y="80" width="56" height="21"/>
+                        <rect key="frame" x="100" y="80" width="56" height="22"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
@@ -53,12 +53,6 @@
                         </state>
                         <state key="selected" image="zhibo_icon_cai_press.png"/>
                     </button>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="232" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="29" translatesAutoresizingMaskIntoConstraints="NO" id="Al7-Ye-Qg5">
-                        <rect key="frame" x="191" y="80" width="29" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JpN-Rm-FDd">
                         <rect key="frame" x="252" y="77" width="30" height="24"/>
                         <state key="normal" image="zhibo_icon_jinggao.png">
@@ -71,9 +65,21 @@
                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                         </state>
                     </button>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="232" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="29" translatesAutoresizingMaskIntoConstraints="NO" id="Al7-Ye-Qg5">
+                        <rect key="frame" x="192" y="80" width="29" height="22"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
             </tableViewCellContentView>
-            <point key="canvasLocation" x="254" y="161"/>
+            <connections>
+                <outlet property="contentLabel" destination="LPD-ZD-Rse" id="Lkq-rs-g1f"/>
+                <outlet property="huifuMehod" destination="hzs-7N-SNC" id="0FL-d8-M0U"/>
+                <outlet property="imgeWithIcon" destination="J8c-Rz-xos" id="h5Z-3b-IgI"/>
+                <outlet property="jubaoMedhod" destination="JpN-Rm-FDd" id="TM9-1Y-iPL"/>
+            </connections>
+            <point key="canvasLocation" x="-162" y="207"/>
         </tableViewCell>
     </objects>
     <resources>
