--- a/QiHuangDJ/VIewController/dianbo/VideoDianbo/DianboViewController.xib
+++ b/QiHuangDJ/VIewController/dianbo/VideoDianbo/DianboViewController.xib
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6245" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
+        <deployment defaultVersion="1792" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
@@ -191,7 +192,7 @@
         <image name="dota_tiao1.png" width="320" height="30"/>
         <image name="zhibo_btn_fanhui.png" width="9" height="16"/>
         <image name="zhibo_btn_huifu.png" width="19" height="17"/>
-        <image name="zhibo_btn_zan.png" width="17" height="15"/>
+        <image name="zhibo_btn_zan.png" width="19" height="17"/>
         <image name="zhibo_huifukuang.png" width="320" height="40"/>
         <image name="zhibo_icon_zan_press.png" width="16" height="14"/>
     </resources>
