--- a/QiHuangDJ/VIewController/dianbo/VideoDianbo/DianboCell.xib
+++ b/QiHuangDJ/VIewController/dianbo/VideoDianbo/DianboCell.xib
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6245" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
+        <deployment defaultVersion="1792" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
     </dependencies>
     <objects>
@@ -79,7 +80,7 @@
                 <outlet property="imgeWithIcon" destination="J8c-Rz-xos" id="h5Z-3b-IgI"/>
                 <outlet property="jubaoMedhod" destination="JpN-Rm-FDd" id="TM9-1Y-iPL"/>
             </connections>
-            <point key="canvasLocation" x="-162" y="207"/>
+            <point key="canvasLocation" x="-307" y="208"/>
         </tableViewCell>
     </objects>
     <resources>
