--- a/QiHuangDJ/VIewController/zhibo/GameVideoLive/VideoLiveViewController.xib
+++ b/QiHuangDJ/VIewController/zhibo/GameVideoLive/VideoLiveViewController.xib
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6245" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
+        <deployment defaultVersion="1792" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
@@ -29,13 +30,13 @@
                         <outlet property="delegate" destination="-1" id="hkt-5J-yfG"/>
                     </connections>
                 </tableView>
-                <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gO4-lr-obG" userLabel="inputVIew">
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gO4-lr-obG" userLabel="inputVIew">
                     <rect key="frame" x="0.0" y="575" width="320" height="37"/>
                     <subviews>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="zhibo_huifukuang.png" translatesAutoresizingMaskIntoConstraints="NO" id="0nA-aV-7o9">
                             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         </imageView>
-                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2jM-Av-2mH">
+                        <textField opaque="NO" clipsSubviews="YES" tag="-20" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2jM-Av-2mH">
                             <rect key="frame" x="8" y="6" width="258" height="30"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits"/>
@@ -109,7 +110,7 @@
                                 <action selector="zanMethod:" destination="-1" eventType="touchUpInside" id="td1-Dd-sKT"/>
                             </connections>
                         </button>
-                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="s6z-RH-uzx" userLabel="discuss Btn">
+                        <button opaque="NO" tag="101" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="s6z-RH-uzx" userLabel="discuss Btn">
                             <rect key="frame" x="157" y="11" width="19" height="22"/>
                             <state key="normal" image="zhibo_btn_huifu.png">
                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -152,7 +153,7 @@
                 <constraint firstItem="ONK-L3-J2d" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="tKQ-fU-Tsv"/>
             </constraints>
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
-            <point key="canvasLocation" x="-1557" y="-245"/>
+            <point key="canvasLocation" x="-1705" y="-233"/>
         </view>
     </objects>
     <resources>
