--- a/QiHuangDJ/VIewController/dianbo/dianbolist/DianboListViewController.xib
+++ b/QiHuangDJ/VIewController/dianbo/dianbolist/DianboListViewController.xib
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6245" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6245" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <deployment defaultVersion="1808" identifier="iOS"/>
+        <deployment defaultVersion="1792" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DianboListViewController">
             <connections>
                 <outlet property="collectionItem" destination="C1X-dp-tny" id="Fiu-tX-mvb"/>
+                <outlet property="collectionView" destination="C1X-dp-tny" id="M06-FY-N3V"/>
                 <outlet property="mySearch" destination="Wz9-VO-Zkt" id="tjd-2X-eNW"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
                 <outletCollection property="btnCollection" destination="2z6-3l-b7X" id="PkA-5y-LPs"/>
