--- a/QiHuangDJ/VIewController/Information/InfomationViewController.xib
+++ b/QiHuangDJ/VIewController/Information/InfomationViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6245" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6245" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment defaultVersion="1792" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
@@ -9,11 +9,12 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="InfomationViewController">
             <connections>
                 <outlet property="attachLabel" destination="bVO-6a-ySk" id="amO-Hh-6K6"/>
-                <outlet property="bodyLabel" destination="dWU-QF-eXs" id="pRU-vQ-4mU"/>
                 <outlet property="commentLabel" destination="I4v-62-nDf" id="ioj-o1-j0M"/>
                 <outlet property="photoImageView" destination="RdP-RT-CfE" id="qLA-jM-WcW"/>
                 <outlet property="titleLabel" destination="ArM-KN-b7K" id="txd-04-mDy"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
+                <outlet property="webViewHeight" destination="dpJ-6T-sWU" id="peU-QT-2ic"/>
+                <outlet property="webViewLaytou" destination="go4-n8-yhE" id="BLi-4v-d6P"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -32,7 +33,7 @@
                             <rect key="frame" x="0.0" y="0.0" width="320" height="390"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="我大标题党我大标题党我大标题党" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ArM-KN-b7K" userLabel="Title Label">
-                                    <rect key="frame" x="8" y="8" width="304" height="20.5"/>
+                                    <rect key="frame" x="8" y="8" width="304" height="21"/>
                                     <constraints>
                                         <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="1" id="OtA-cR-zz7"/>
                                     </constraints>
@@ -55,22 +56,6 @@
                                         <constraint firstAttribute="width" secondItem="RdP-RT-CfE" secondAttribute="height" multiplier="310:150" id="ngY-0R-gDr"/>
                                     </constraints>
                                 </imageView>
-                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="304" translatesAutoresizingMaskIntoConstraints="NO" id="dWU-QF-eXs" userLabel="Body Label">
-                                    <rect key="frame" x="8" y="211" width="304" height="42"/>
-                                    <constraints>
-                                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="1" id="OJ0-JV-LIC"/>
-                                    </constraints>
-                                    <attributedString key="attributedText">
-                                        <fragment content="人间清暑殿天上广寒宫人间清暑殿天上广寒宫人间清暑殿天上广寒宫人间清暑殿天上广寒宫人间清暑殿天上广寒宫人间清暑殿天上广寒宫">
-                                            <attributes>
-                                                <color key="NSColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
-                                                <font key="NSFont" size="14" name="STHeitiSC-Light"/>
-                                                <paragraphStyle key="NSParagraphStyle" alignment="left" lineBreakMode="truncatingTail" baseWritingDirection="natural"/>
-                                            </attributes>
-                                        </fragment>
-                                    </attributedString>
-                                    <nil key="highlightedColor"/>
-                                </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="赛前点评：" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HxQ-dz-DUD" userLabel="Comment Indicating Label">
                                     <rect key="frame" x="8" y="273" width="304" height="17"/>
                                     <constraints>
@@ -96,17 +81,30 @@
                                     </attributedString>
                                     <nil key="highlightedColor"/>
                                 </label>
+                                <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="go4-n8-yhE">
+                                    <rect key="frame" x="8" y="211" width="304" height="54"/>
+                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="54" id="dpJ-6T-sWU"/>
+                                    </constraints>
+                                    <connections>
+                                        <outlet property="delegate" destination="-1" id="hC3-5V-e0S"/>
+                                    </connections>
+                                </webView>
                             </subviews>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <constraints>
                                 <constraint firstAttribute="trailing" secondItem="RdP-RT-CfE" secondAttribute="trailing" constant="8" id="1dw-B9-nx3"/>
                                 <constraint firstItem="I4v-62-nDf" firstAttribute="top" secondItem="HxQ-dz-DUD" secondAttribute="bottom" constant="8" id="3s1-Hc-qrz"/>
-                                <constraint firstItem="dWU-QF-eXs" firstAttribute="leading" secondItem="0rM-3w-Wt2" secondAttribute="leading" constant="8" id="8H1-5g-0GS"/>
+                                <constraint firstItem="go4-n8-yhE" firstAttribute="leading" secondItem="0rM-3w-Wt2" secondAttribute="leading" constant="8" id="8Tc-Ck-e4e"/>
                                 <constraint firstItem="ArM-KN-b7K" firstAttribute="leading" secondItem="0rM-3w-Wt2" secondAttribute="leading" constant="8" id="Az9-Pu-D5W"/>
                                 <constraint firstAttribute="trailing" secondItem="bVO-6a-ySk" secondAttribute="trailing" constant="8" id="Bkx-ZQ-zB0"/>
+                                <constraint firstAttribute="trailing" secondItem="go4-n8-yhE" secondAttribute="trailing" constant="8" id="HBi-BJ-U8J"/>
                                 <constraint firstItem="I4v-62-nDf" firstAttribute="leading" secondItem="0rM-3w-Wt2" secondAttribute="leading" constant="8" id="HVr-ZC-tYc"/>
+                                <constraint firstItem="HxQ-dz-DUD" firstAttribute="top" secondItem="go4-n8-yhE" secondAttribute="bottom" constant="8" id="IcI-Bb-8Y3"/>
                                 <constraint firstItem="RdP-RT-CfE" firstAttribute="top" secondItem="bVO-6a-ySk" secondAttribute="bottom" constant="8" id="KCT-L2-1aL"/>
                                 <constraint firstItem="bVO-6a-ySk" firstAttribute="leading" secondItem="0rM-3w-Wt2" secondAttribute="leading" constant="8" id="KQb-QF-hx4"/>
+                                <constraint firstItem="go4-n8-yhE" firstAttribute="top" secondItem="RdP-RT-CfE" secondAttribute="bottom" constant="8" id="M8b-R2-twa"/>
                                 <constraint firstAttribute="trailing" secondItem="ArM-KN-b7K" secondAttribute="trailing" constant="8" id="ROU-gp-c8J"/>
                                 <constraint firstAttribute="trailing" secondItem="HxQ-dz-DUD" secondAttribute="trailing" constant="8" id="SHf-3j-kSD"/>
                                 <constraint firstAttribute="bottom" secondItem="I4v-62-nDf" secondAttribute="bottom" constant="50" id="bFS-ju-Wxj"/>
@@ -114,10 +112,7 @@
                                 <constraint firstItem="bVO-6a-ySk" firstAttribute="top" secondItem="ArM-KN-b7K" secondAttribute="bottom" constant="8" id="coT-XW-8iA"/>
                                 <constraint firstItem="HxQ-dz-DUD" firstAttribute="leading" secondItem="0rM-3w-Wt2" secondAttribute="leading" constant="8" id="fW6-UU-QYc"/>
                                 <constraint firstItem="ArM-KN-b7K" firstAttribute="top" secondItem="0rM-3w-Wt2" secondAttribute="top" constant="8" id="kmz-d6-POf"/>
-                                <constraint firstAttribute="trailing" secondItem="dWU-QF-eXs" secondAttribute="trailing" constant="8" id="mBp-qK-7Xf"/>
                                 <constraint firstItem="RdP-RT-CfE" firstAttribute="leading" secondItem="0rM-3w-Wt2" secondAttribute="leading" constant="8" id="rMr-Vj-nY6"/>
-                                <constraint firstItem="dWU-QF-eXs" firstAttribute="top" secondItem="RdP-RT-CfE" secondAttribute="bottom" constant="8" id="s76-Tf-Lco"/>
-                                <constraint firstItem="HxQ-dz-DUD" firstAttribute="top" secondItem="dWU-QF-eXs" secondAttribute="bottom" constant="20" id="zGr-Yp-i0q"/>
                             </constraints>
                         </view>
                     </subviews>
@@ -143,6 +138,7 @@
             </constraints>
             <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+            <point key="canvasLocation" x="-213" y="372"/>
         </view>
     </objects>
     <resources>
