「点播」各种改

--- a/QiHuangDJ/VIewController/dianbo/dianbolist/SliderRightList.xib
+++ b/QiHuangDJ/VIewController/dianbo/dianbolist/SliderRightList.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6245" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6245" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <deployment defaultVersion="1808" identifier="iOS"/>
+        <deployment defaultVersion="1792" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
     </dependencies>
     <objects>
@@ -13,7 +13,7 @@
             <subviews>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="VUU-qe-MKQ">
                     <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <connections>
                         <outlet property="dataSource" destination="-1" id="sDH-dd-zId"/>
                         <outlet property="delegate" destination="-1" id="ZdY-Zc-bUw"/>
@@ -24,12 +24,14 @@
             <constraints>
                 <constraint firstAttribute="bottom" secondItem="VUU-qe-MKQ" secondAttribute="bottom" id="Msq-A0-qCU"/>
                 <constraint firstItem="VUU-qe-MKQ" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="PgF-ws-LYy"/>
-                <constraint firstAttribute="centerY" secondItem="VUU-qe-MKQ" secondAttribute="centerY" id="bnb-Fx-Wne"/>
                 <constraint firstItem="VUU-qe-MKQ" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="hZx-wf-73K"/>
                 <constraint firstAttribute="trailing" secondItem="VUU-qe-MKQ" secondAttribute="trailing" id="x0E-sT-1j8"/>
             </constraints>
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
-            <point key="canvasLocation" x="248" y="292"/>
+            <connections>
+                <outlet property="tableView1" destination="VUU-qe-MKQ" id="byM-j8-WRM"/>
+            </connections>
+            <point key="canvasLocation" x="267" y="179"/>
         </view>
     </objects>
 </document>
