--- a/QiHuangDJ/VIewController/dianbo/dianbolist/KHLCategorySliderTableViewCell.xib
+++ b/QiHuangDJ/VIewController/dianbo/dianbolist/KHLCategorySliderTableViewCell.xib
@@ -25,7 +25,7 @@
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="溪云初起日沉阁" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NKs-Gc-QEA" userLabel="Category Label">
                         <rect key="frame" x="44" y="8" width="200" height="28"/>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="textColor" red="0.96078431369999995" green="0.96078431369999995" blue="0.96078431369999995" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eHO-7k-as4" userLabel="Category Subscribe Button">
@@ -33,8 +33,9 @@
                         <constraints>
                             <constraint firstAttribute="width" constant="60" id="tsH-Y6-fKR"/>
                         </constraints>
-                        <state key="normal" image="celan_dinngyue_press.png">
-                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                        <state key="normal" title="订阅" backgroundImage="celan_dinngyue_press.png">
+                            <color key="titleColor" red="1" green="0.50196081400000003" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                            <color key="titleShadowColor" red="1" green="0.50196081400000003" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         </state>
                     </button>
                 </subviews>
