--- a/QiHuangDJ/VIewController/superStart/KHLEntertainerHolderView.xib
+++ b/QiHuangDJ/VIewController/superStart/KHLEntertainerHolderView.xib
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6245" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6245" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
-        <deployment defaultVersion="1792" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
     </dependencies>
     <objects>
@@ -125,6 +124,7 @@
                 <outlet property="photoImageView" destination="hcs-2T-Dd5" id="qbx-VX-ogD"/>
                 <outlet property="programmeWebView" destination="Kfr-cx-3Fd" id="cgN-3t-0J2"/>
             </connections>
+            <point key="canvasLocation" x="230" y="368"/>
         </view>
     </objects>
     <resources>
