--- a/QiHuangDJ/VIewController/superStart/SuperStartViewController.xib
+++ b/QiHuangDJ/VIewController/superStart/SuperStartViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6245" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6245" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment defaultVersion="1792" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
@@ -45,7 +45,7 @@
                 <constraint firstAttribute="trailing" secondItem="QtG-ds-mhJ" secondAttribute="trailing" id="vLF-JH-AyH"/>
             </constraints>
             <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
-            <point key="canvasLocation" x="-55" y="56"/>
+            <point key="canvasLocation" x="-97" y="-151"/>
         </view>
     </objects>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
